--- a/Index.html
+++ b/Index.html
@@ -43,11 +43,13 @@
 			<article> 
 
 				<h1>Hello we´re a creative agency</h1>
+
 				    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					    consequat.
 				    </p> 
+
 					<p>
 						Duis aute irure dolor in reprehenderit in voluptate velit esse
 						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
@@ -57,9 +59,9 @@
 						<a href="purchase.html">Purchase</a>
 
 
-					</article>  
-				</div>
-			</section>
+			</article>  
+		</div>
+	</section>
 
 	 <section>
 
@@ -72,6 +74,7 @@
                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                </p>
             </article>
+
             <article>
                <img src="retina.img">
                <h1>Retina Ready</h1>
@@ -80,7 +83,8 @@
                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                </p>
             </article>
-            	<article>
+
+            <article>
                <img src="Moderndesign.img">
                <h1>Modern Design</h1>
                <p> 
@@ -96,8 +100,11 @@
                	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                </p>
-            </article>           
+
+            </article>  
+
         </div>
+
 
 	 </section>
 
@@ -130,6 +137,7 @@
                <img src="http://placehold.it/370x261"> 
                <h1> large poster set</h1> 
                <h5> Marketing </h5>
+                <h5> Marketing </h5>
              </article>
              <article>
                <img src="http://placehold.it/370x261"> 
