--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-	<meta charset="utf-8">|<!--atributo/-->
-	<title>Primer Proyecto</title> <!--comentarios/-->
-</head>
-<body>
-	<header> 
-		<nav> 
-			<a href="index.html">
-				<img src="imagenes/logo.png">
-			</a>
+
+ <head>
+  	<meta charset="utf-8"><!--atributo/-->
+ 	  <title>Primer Proyecto</title> <!--comentarios/-->
+ </head>
+
+ <body>
+	<header> <!--encabezado/-->
+	 	<nav> <!--navegador superior-->
+		  	<a href="index.html">
+			  	<img src="imagenes/logo.png">
+			  </a>
 
 			<ul> 
 
@@ -23,10 +25,8 @@
 				<a href="shortcodes.html"> <img src="carrito">  </a> <!--Carrito/-->
 				<a href="shortcodes.html"> <img src="busqueda"> </a> <!--lupa de busqueda/-->
 
-
-
-
 			</ul><!--Lista ordenada/-->
+
 		</nav> 
 
 		<article>
@@ -233,31 +233,5 @@
 </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		</body>
-		</html>
+</body>
+</html>
